src/objects/EventApi__Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Id__c</fullName>
		<externalId>true</externalId>
		<label>AttendeeID</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
		<unique>true</unique>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <formula>EventApi__Event__r.Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidebook_Import_Id__c</fullName>
		<label>Guidebook_Import_Id</label>
		<length>50</length>
		<type>Text</type>
    </fields>
    <fields>
        <fullName>Revoked__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Revoked</label>
		<type>Checkbox</type>
    </fields>
</CustomObject>